-
Type:
Bug
-
Status: Resolved
-
Priority:
Critical
-
Resolution: Fixed
-
Fix Version/s: 0.4.14
-
Component/s: Drivers: Filesystems, NTCore
-
Labels:
-
Module:
-
Guilty Commit:5ab1cfc553f11731d9a352f1157084cc1dfd9042
Starting with 5ab1cfc553f11731d9a352f1157084cc1dfd9042, ReactOS has stopped assigning a drive letter to Unix volumes (ext2/3, BtrFS and so on) and thus the volumes are no longer mounted nor presented to the users.
- blocks
-
CORE-16494 Upgrade WinBtrfs driver to v1.5
-
- Resolved
-